--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": ["tests/utilities/functions.php"]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
