task #599: begin develop timers

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=69265332ec08b36deb2e",
-    "/css/app.css": "/css/app.css?id=c56172d05e62190bbd20",
-    "/css/base.css": "/css/base.css?id=e1e04b1aa74c58848f22"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
