--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.18.1",
         "bootstrap": "^4.3.1",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.2.1",
         "laravel-mix": "^4.1.4",
         "react": "^16.2.0",
@@ -24,7 +26,5 @@
         "stylus": "^0.54.7",
         "stylus-loader": "^3.0.2"
     },
-    "dependencies": {
-        "draft-js": "^0.11.4"
-    }
+    "dependencies": {}
 }
