--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
         "stylus": "^0.54.7",
         "stylus-loader": "^3.0.2"
     },
-    "dependencies": {}
+    "dependencies": {
+        "jodit-react": "^1.0.38"
+    }
 }
