--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "stylus-loader": "^3.0.2"
     },
     "dependencies": {
-        "jodit-react": "^1.0.38"
+        "draft-js": "^0.11.4",
+        "draft-js-export-html": "^1.4.1",
+        "prop-types": "^15.7.2"
     }
 }
