--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0",
-        "ext-json": "*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
