task #599: add edit deadline task by author and update task in work timers

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=ec63c71f112f830099de",
-    "/css/app.css": "/css/app.css?id=2628714eab03892f4216"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
