task #599: modify timer update method

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c5ec00a1435d12c3969a",
+    "/css/app.css": "/css/app.css?id=38b3fe8a0984116b45cc"
 }
