--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=13c8072632d1deb0f050",
+    "/css/app.css": "/css/app.css?id=0b598a1dceddb7b6a102"
 }
