--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/preset-react": "^7.0.0",
-        "axios": "^0.18.1",
+        "axios": "^0.19",
         "bootstrap": "^4.3.1",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^5.2.1",
-        "laravel-mix": "^4.1.4",
+        "cross-env": "^7.0",
+        "laravel-mix": "^5.0.1",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "resolve-url-loader": "^2.3.2",
-        "sass": "^1.22.12",
-        "sass-loader": "^7.3.1",
-        "stylus": "^0.54.7",
-        "stylus-loader": "^3.0.2"
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
     },
     "dependencies": {
         "draft-js": "^0.11.4",
