--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "longman/telegram-bot": "^0.61.1"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
